<resources>
    <string name="app_name">Splashlogin</string>
    <string name="enter_your_phone_number_11_digits_only">Enter your phone number 11 digits only</string>
    <string name="login">Login</string>
    <string name="regiser">Regiser</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password:</string>
    <string name="phone">Phone:</string>
    <string name="your_password">Your Password</string>
    <string name="your_phone">Your Phone</string>
    <string name="eng_suhail_al_ansary">Eng. Suhail Al-ansary</string>
    <string name="apps_square">Apps Square</string>
    <string name="todo">TODO</string>
</resources>