<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFC107"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="#F0F3F6"
            android:layout_gravity="center"


            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="#F0F3F6"
            android:hint="@string/your_phone"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="#2196F3"
            android:textColorHint="#009688"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:textSize="30sp"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="#F0F3F6"
            android:layout_gravity="center"


            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="#F0F3F6"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#2196F3"


            android:textColorHint="#009688"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#FF5722"
            android:padding="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFEB3B"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="start"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#FF5722"
            android:padding="20dp"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="#FFEB3B"
            android:textSize="30sp"
            android:textStyle="bold" />




    </LinearLayout>


</LinearLayout>